<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/login_background"
              android:orientation="vertical">

    <com.hr.ui.view.TitleBarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/main_color"
        app:leftBtnImage="@mipmap/btn_return"
        app:left_padding_left="12dp"
        app:titleColor="@color/white"
        app:titleText="@string/register_interface"
        app:titleTextSize="20sp"/>


    <EditText
        android:id="@+id/et_registerUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/name_hint"
        android:inputType="phone"
        android:maxLength="11"/>

    <EditText
        android:id="@+id/et_registerUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/et_registerUserPasswordSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password_confirm_hint"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="@drawable/login_shape"
        android:text="@string/register"
        android:textSize="16sp"
        />


</LinearLayout>